--- a/css/style.css
+++ b/css/style.css
@@ -785,7 +785,7 @@ swiper-slide {
     transform:scale(0.3); 
     fill: none; 
     stroke: #ef3b2d; 
-    stroke-width: 15; 
+    stroke-width: 13; 
     stroke-linecap: round; 
     stroke-linejoin:  miter; 
     stroke-miterlimit: 4;
@@ -1192,9 +1192,20 @@ textarea:focus, input:focus{
 
 
 
-.accueilGridPresentation {
+#accueilGridPresentation {
+    position: relative;
     width: 95%;
     /* margin: 0px auto; */
+
+    display: inline-flex;
+    flex-direction: row-reverse;
+
+    align-items: center;
+    gap: 15px;
+}
+#portraitAccueil {
+    float: none;
+    margin: 0px 0px 0px 0px;
 }
 
 
@@ -1857,7 +1868,7 @@ ul {
 @keyframes fadeInCompetences {
     from {
         opacity: 0;
-        transform: scale(0.7);
+        transform: scale(0.85);
     }
     to {
         opacity: 1;
@@ -2858,7 +2869,7 @@ ul {
 
 .carouselImgProject {
     width: -webkit-fill-available;
-    width: 45%;
+    width: 48%;
 
     border-radius: 10px;
 }
@@ -3721,6 +3732,19 @@ ul {
     opacity: 0;
 }
 
+.shapePresentation {
+    position: absolute;
+    opacity: 0.27;
+
+    /* width: 100%; */
+    transform: scale(1.5);
+    height: -webkit-fill-available;
+
+    bottom: 28px;
+    left: 10px;
+}
+
+
 
 #portfolioTitle {
     font-size: 2em;
@@ -3730,12 +3754,24 @@ ul {
 
 
 .paragrapheAccueil { 
+    position: relative;
+    overflow: hidden;
+
     /* text-align: justify; */
     text-align: left;
     color: #E7E8F2;
     margin: 0px 20px 12px 20px;
     
     font-size: 1.2em;
+
+    background-color: #00000017;
+    padding: 12px 10px 14px 24px;
+    border-radius: 12px;
+    box-shadow: 6px 6px 25px 0px #00ffff24;
+    border-bottom: 1px solid #19ddbc54;
+    border-right: 1px solid #19ddbc30;
+
+    animation: fadeIn 0.5s 0s ease forwards;
 }
 #paragrapheAccueil[data-theme="light"] {
     color: var(--black);
