--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -237,8 +237,12 @@
         text-align: justify;
 
         font-size: 1.05em;
-        margin: 0px 7px 12px 7px;
-        margin-bottom: 20px !important;
+        margin: 0px 0px 12px 0px;
+        /* margin-bottom: 20px !important; */
+        margin-bottom: 0px;
+
+        padding: 15px 18px 15px 19px;
+        
     }
 
     .projetNbr {
@@ -351,6 +355,7 @@
     
     .accueilPageContent {
         margin: 0% 5%;
+        /* margin: 0% 3%; */
     }
 
     #pageContainer {
@@ -1109,6 +1114,16 @@
         opacity: 1;
     }
 
+    @keyframes fadeInCompetences {
+        from {
+            opacity: 0;
+            transform: scale(0.75);
+        }
+        to {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
 
     .iframe {
         margin: auto;
@@ -2294,6 +2309,27 @@
     .linkedinBtn {
         padding: 13px 14px;
     }
+    
+    #accueilGridPresentation {
+        overflow: hidden;
+        width: 100%;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 23px;
+        
+        border-bottom-left-radius: 11px;
+        border-bottom-right-radius: 11px;
+    }
+
+    #portraitAccueil {
+        float: right;
+        /* margin: 0px 0px 0px 0px; */
+        margin: 7px 12px 0px 24px;
+    }
+
+    .fixScalePortraitPC {
+        left: 0px;
+    }
 
     .imgAccueil {
 
@@ -2302,16 +2338,19 @@
 
         position: relative;
         top: 8px;
+        float: right;
 
         border: 1px solid white;
 
         opacity: 0;
         width: 100px;
         height: 101px;
-        margin: 4px 10px 10px 18px;
+        /* margin: 4px 10px 10px 18px; */
+        margin: 0px 0px 0px 0px;
 
         padding: 2px 2px 2px 8px;
-        left: -14px;
+        /* left: -14px; */
+        left: 0px;
 
         filter: blur(3px) grayscale(1);
         animation: imgAccueilFadeIn 2s 1.8s ease forwards;
